--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-slick": "^0.30.3",
     "react-spinners": "^0.17.0",
